--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 :root {
-	--dark-color-a: #667aff;
-	--dark-color-b: #7386ff;
-	--light-color: #e6e9ff;
+	--dark-color-a: #fb3f3f;
+	--dark-color-b: #d81919;
+	--light-color: #fde4dc;
 	--success-color: #5cb85c;
 	--error-color: #d9534f;
 }
